# simple-compiler

./: .gitignore  README.md  architecture.md  language.md
AlbertCompiler/: CMakeLists.txt
AlbertCompiler/AlbertCompiler/: CMakeLists.txt
AlbertCompiler/AlbertCompiler/src/cli/: main.cpp
AlbertCompiler/AlbertCompiler/src/frontend/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenType.h
AlbertCompiler/AlbertCompiler/src/frontend/parser/: Parser.cpp  Parser.h
AlbertCompiler/AlbertCompiler/src/frontend/parser/ast/: Expr.h  Stmt.h
